--- a/#src/scss/section/menu-float.scss
+++ b/#src/scss/section/menu-float.scss
@@ -12,6 +12,7 @@
 	z-index: 9;
 	pointer-events: none;
 	z-index: 12;
+
 	@include _768 {
 		display: block;
 	}
@@ -249,6 +250,10 @@
 	// .main-menu__menu-link
 	&__menu-link {
 		margin-left: 1.2rem;
+		font:
+			1.5rem Roboto,
+			sans-serif;
+		font-weight: 300;
 		font-size: 1.5rem;
 		white-space: nowrap;
 		&:not(:last-child) {
