--- a/#src/pug/pages/pages/services.pug
+++ b/#src/pug/pages/pages/services.pug
@@ -1,8 +1,9 @@
 extends ../../layouts/app_layout
-block link  
-	link(rel="stylesheet" type="text/css" href="@@webRoot/css/services.min.css" ) 
-append script  
-	script(defer="defer" type="text/javascript" src="@@webRoot/js/app/services.min.js")
+append link  
+	link(rel="stylesheet" type="text/css" href="@@webRoot/css/bio-style.min.css" ) 
+prepend script
+	script(defer="defer" type="text/javascript" src="@@webRoot/js/app/appbio.min.js")
+	script(defer="defer" type="text/javascript" src="@@webRoot/js/app/animatebio.min.js")
 block title
 	- var text='Услуги / Студия зувукозаписи "Gusli" Обнинск' 
 
@@ -11,14 +12,13 @@ block page
 		block header
 			._header  
 			._fade-in.bp-1
-		._main-content
+		._main-content#wrapper 
 			block main-content 
-				main.main-conten 
-					._content 
+				main.main-content
+					._content#content 
 						block section 
-		//- 					section._services 
-		//- 					//- section._template 
-		//- 				block footer
-		//- 					._footer 
-		//- 	block mobile-menu
-		//- 		._menu-float 
+							section._aboute
+						block footer
+							._footer 
+			block mobile-menu
+				._menu-float 
