--- a/#src/pug/pages/index.pug
+++ b/#src/pug/pages/index.pug
@@ -24,3 +24,6 @@ block page
 							._footer 
 			block mobile-menu
 				._menu-float 
+		block button 
+			._button#scrollButton
+				+iconfont('angle-down')
