--- a/#src/scss/index.scss
+++ b/#src/scss/index.scss
@@ -50,6 +50,8 @@
 
 // todo --------------------------- Assets -------------------------------------
 @import 'assets/burger-button';
+@import 'assets/button';
+@import 'assets/audio-player';
 // todo --------------------------- layout -------------------------------------
 @import 'layouts/bem-block';
 @import 'layouts/header';
