--- a/#src/scss/layouts/footer.scss
+++ b/#src/scss/layouts/footer.scss
@@ -123,6 +123,7 @@
 				gap: 0.5rem;
 				padding: 0.5rem 0;
 				flex-wrap: nowrap;
+				text-transform: uppercase;
 				transition: color 0.4s ease-in-out;
 				@extend .link_underline;
 
