--- a/#src/pug/layouts/app_layout.pug
+++ b/#src/pug/layouts/app_layout.pug
@@ -20,8 +20,8 @@ html(lang="ru")
 		include ../includes/mixins
 		div(class="wrapper")
 			block page 
-				block header 
+				//- block header 
 				block main-content
-					block section 
-					block footer 
-					block mobile-menu
+					//- block section 
+					//- block footer 
+					//- block mobile-menu
