--- a/#src/scss/core/_variables-icon.scss
+++ b/#src/scss/core/_variables-icon.scss
@@ -1,6 +1,9 @@
 $icon-font-family: 'icon-set' !default;
 $icon-font-path: '../fonts' !default;
 
+$icon-phone-ringing: unquote('"\\e904"');
+$icon-cellular-phone: unquote('"\\e907"');
+$icon-phone-hand: unquote('"\\e908"');
 $icon-angle-left: unquote('"\\f104"');
 $icon-angle-right: unquote('"\\f105"');
 $icon-angle-up: unquote('"\\f106"');
