--- a/#src/scss/layouts/bem-block.scss
+++ b/#src/scss/layouts/bem-block.scss
@@ -37,3 +37,15 @@
 		}
 	}
 }
+// -----------------------------------------------------------------------------
+._ibg {
+	position: relative;
+	img {
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
