--- a/#src/scss/section/menu-float.scss
+++ b/#src/scss/section/menu-float.scss
@@ -13,7 +13,7 @@
 	pointer-events: none;
 	z-index: 12;
 
-	@include _768 {
+	@include _920 {
 		display: block;
 	}
 
@@ -153,6 +153,7 @@
 		cursor: pointer;
 		position: relative;
 		text-transform: uppercase;
+		font-weight: 200;
 		transition: all 0.4s ease-in-out;
 
 		&:not(:last-child) {
