--- a/#src/pug/layouts/app_layout.pug
+++ b/#src/pug/layouts/app_layout.pug
@@ -19,9 +19,10 @@ html(lang="ru")
 		include ../modules/loading
 		include ../includes/mixins
 		div(class="wrapper")
-			block page 
+			block page-content 
 				//- block header 
 				block main-content
 					//- block section 
 					//- block footer 
-					//- block mobile-menu
+					//- block mobile-menu 
+		//- script(defer="defer" type="text/javascript" src="@@webRoot/js/main.min.js")
