--- a/#src/scss/index.scss
+++ b/#src/scss/index.scss
@@ -57,7 +57,7 @@
 @import 'layouts/header';
 @import 'layouts/footer';
 // todo --------------------------- Pages --------------------------------------
-@import 'pages/main-page';
+@import 'pages/page-main';
 // todo --------------------------- Modules ------------------------------------
 // @import 'modules/loading';
 // @import 'modules/breadcrumbs';
