--- a/#src/scss/layouts/bem-block.scss
+++ b/#src/scss/layouts/bem-block.scss
@@ -40,12 +40,14 @@
 // -----------------------------------------------------------------------------
 ._ibg {
 	position: relative;
+	height: 100%;
+	width: 100%;
 	img {
 		position: absolute;
 		top: 0;
-		right: 0;
+		left: 0;
 		width: 100%;
 		height: 100%;
-		object-fit: cover;
+		object-fit: fill;
 	}
 }
