--- a/#src/pug/pages/index.pug
+++ b/#src/pug/pages/index.pug
@@ -1,10 +1,11 @@
 extends ../layouts/app_layout
 append link 
 	link(rel="stylesheet" type="text/css" href="@@webRoot/css/index.min.css")
-//- prepend script 
-	//- script(defer="defer" type="text/javascript" src="@@webRoot/js/app/appindex.min.js")
-	//- script(defer="defer" type="text/javascript" src="@@webRoot/js/index.min.js")
-	//- script(defer="defer" type="text/javascript" src="@@webRoot/js/app/animateindex.min.js")
+prepend script 
+	script(defer="defer" type="text/javascript" src="@@webRoot/js/app/runtime.min.js")
+	script(defer="defer" type="text/javascript" src="@@webRoot/js/app/appindex.min.js")
+	script(defer="defer" type="text/javascript" src="@@webRoot/js/index.min.js")
+	script(defer="defer" type="text/javascript" src="@@webRoot/js/app/animateindex.min.js")
 block title
 	- var text='Студия зувукозаписи "Gusli" Обнинск' 
 
@@ -28,8 +29,3 @@ block page-content
 		block button 
 			._button#scrollButton
 					+iconfont('angle-down')
-
-	script(type="text/javascript" src="@@webRoot/js/app/runtime.min.js")
-	script(type="text/javascript" src="@@webRoot/js/app/appindex.min.js")
-	script(defer="defer" type="text/javascript" src="@@webRoot/js/index.min.js")
-	//- script(defer="defer" type="text/javascript" src="@@webRoot/js/app/animateindex.min.js")
