--- a/#src/pug/layouts/app_layout.pug
+++ b/#src/pug/layouts/app_layout.pug
@@ -11,6 +11,8 @@ html(lang="ru")
 			link(rel="icon" type="image/icon" href="@@webRoot/img/icons/icon-logo.ico") 
 		block script
 			script(defer="defer" type="text/javascript" src="@@webRoot/js/main.min.js") 
+		//- prepend script 
+			
 		block title
 		- var text
 			title #{text}
