--- a/#src/pug/pages/pages/about.pug
+++ b/#src/pug/pages/pages/about.pug
@@ -2,10 +2,10 @@ extends ../../layouts/app_layout
 append link  
 	link(rel="stylesheet" type="text/css" href="@@webRoot/css/bio-style.min.css" ) 
 prepend script 
-	//- script(type="text/javascript" src="@@webRoot/js/app/runtime.min.js")
-	script(defer="defer" type="text/javascript" src="@@webRoot/js/app/appbio.min.js")
-	script(defer="defer" type="text/javascript" src="@@webRoot/js/bio.min.js")
-	script(defer="defer" type="text/javascript" src="@@webRoot/js/app/animatebio.min.js")
+	script(defer="defer" type="text/javascript" src="@@webRoot/js/app/runtime.min.js")
+	script(defer="defer" type="text/javascript" src="@@webRoot/js/app/anime-vendors.min.js")
+	script(defer="defer" type="text/javascript" src="@@webRoot/js/app/app-about.min.js")
+	script(defer="defer" type="text/javascript" src="@@webRoot/js/about.min.js") 
 block title
 	- var text='Услуги / Студия зувукозаписи "Gusli" Обнинск' 
 
