--- a/#src/scss/about-style.scss
+++ b/#src/scss/about-style.scss
@@ -60,6 +60,7 @@
 @import 'pages/page-bio';
 // @import 'pages/page-main';
 // todo --------------------------- Modules ------------------------------------
+@import 'modules/preloader';
 // @import 'modules/loading';
 // @import 'modules/breadcrumbs';
 // todo -------------------------- Sections ------------------------------------
