--- a/#src/scss/index.scss
+++ b/#src/scss/index.scss
@@ -59,7 +59,7 @@
 // todo --------------------------- Pages --------------------------------------
 @import 'pages/page-main';
 // todo --------------------------- Modules ------------------------------------
-// @import 'modules/loading';
+@import 'modules/preloader';
 // @import 'modules/breadcrumbs';
 // todo -------------------------- Sections ------------------------------------
 @import 'section/section-mainslide';
