--- a/#src/pug/layouts/app_layout.pug
+++ b/#src/pug/layouts/app_layout.pug
@@ -18,7 +18,7 @@ html(lang="ru")
 			title #{text}
 
 	body
-		include ../modules/loading
+		include ../modules/preloader
 		include ../includes/mixins
 		div(class="wrapper")
 			block page-content 
