--- a/#src/scss/assets/_button.scss
+++ b/#src/scss/assets/_button.scss
@@ -2,9 +2,9 @@
 	//. page_buttom
 	&__aside {
 		position: fixed;
-		top: 0;
+		bottom: 14rem;
 		left: 0;
-		height: 100vh;
+		// height: 100vh;
 		width: 45px;
 		z-index: 13;
 		padding-left: 1rem;
