--- a/#src/pug/layouts/app_layout.pug
+++ b/#src/pug/layouts/app_layout.pug
@@ -22,9 +22,13 @@ html(lang="ru")
 		include ../includes/mixins
 		div(class="wrapper")
 			block page-content 
-				//- block header 
-				block main-content
-					//- block section 
-					//- block footer 
-					//- block mobile-menu 
-		//- script(defer="defer" type="text/javascript" src="@@webRoot/js/main.min.js")
+				block main-content 
+		//- script.
+		//- 		document.addEventListener('DOMContentLoaded', function() {
+		//- 				var element = document.getElementById('target-services');
+		//- 				if (element) {
+		//- 						element.scrollIntoView({ behavior: 'smooth' });
+		//- 				} else {
+		//- 						console.error('Элемент с идентификатором target-services не найден на странице.');
+		//- 				}
+		//- 		})
