--- a/#src/pug/pages/pages/about.pug
+++ b/#src/pug/pages/pages/about.pug
@@ -13,8 +13,7 @@ block title
 block page-content 
 	.page
 		block header
-			._header  
-			//- ._fade-in.bp-1
+			._header
 		._main-content
 			block main-content 
 				main.main-content#wrapper 
@@ -23,9 +22,9 @@ block page-content
 							section._about
 							section._achievements
 						block footer
-							._footer 
+							._footer#footer
 			block mobile-menu
 				._menu-float
 		block button 
-			._button#scrollButton
-				+iconfont('angle-down')
+			._aside#scrollButton
+				+iconfont('angle-down', '_button')
