--- a/#src/pug/pages/pages/about.pug
+++ b/#src/pug/pages/pages/about.pug
@@ -13,7 +13,8 @@ block title
 block page-content 
 	.page
 		block header
-			._header
+			._header  
+			//- ._fade-in.bp-1
 		._main-content
 			block main-content 
 				main.main-content#wrapper 
@@ -22,9 +23,9 @@ block page-content
 							section._about
 							section._achievements
 						block footer
-							._footer#footer
+							._footer 
 			block mobile-menu
 				._menu-float
 		block button 
-			._aside#scrollButton
-				+iconfont('angle-down', '_button')
+			._button#scrollButton
+				+iconfont('angle-down')
