--- a/#src/scss/modules/preloader.scss
+++ b/#src/scss/modules/preloader.scss
@@ -13,7 +13,7 @@
 	&__loader {
 		width: 48px;
 		height: 48px;
-		border: 3px solid $neon-blue;
+		border: 3px solid #fff;
 		border-radius: 50%;
 		display: inline-block;
 		position: relative;
@@ -32,7 +32,7 @@
 		height: 56px;
 		border-radius: 50%;
 		border: 3px solid;
-		border-color: $neon-purple transparent;
+		border-color: #ff3d00 transparent;
 	}
 }
 .preloader-remove {
