--- a/#src/scss/section/section-about.scss
+++ b/#src/scss/section/section-about.scss
@@ -1,7 +1,7 @@
 .about {
 	position: relative;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 
 	// .about__bg-image
 	&__bg-image {
@@ -26,7 +26,7 @@
 
 	// .about__content
 	&__content {
-		padding: 4.5rem 2rem;
+		padding: 4.5rem 0;
 		display: flex;
 		align-items: center;
 		justify-content: flex-end;
